ontol/ontol-compiler/test-cases/error/repr/abstract1.on
def foo ( // ERROR type not representable
    rel. 'id': (rel* is: text)
    rel* 'n':
        number // NOTE type of field is abstract
)
